dev-ui: add vesting owner to account info

--- a/clients/dev-ui/index.html
+++ b/clients/dev-ui/index.html
@@ -272,6 +272,10 @@
             </div>
             <div vesting-account-details>
                 <div class="info-block">
+                    <strong>Vesting Owner</strong>
+                    <span vesting-owner class="address"></span>
+                </div>
+                <div class="info-block">
                     <strong>Vesting Start</strong>
                     <span vesting-start></span>
                 </div>
